<resources>
    <string name="app_name">FirebaseApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="link">Link</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
</resources>