<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_img"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginEnd="16dp"
            android:src="@color/teal_200" />

        <TextView
            android:id="@+id/tv_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/iv_img"
            android:fontFamily="@font/segoeui_bold"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_link"
            android:layout_toEndOf="@id/iv_img"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_ubah"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubah"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_hapus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hapus"
                android:textSize="12sp" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
